# differentiable-privacy-percentages

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml  requirements-cc.txt  requirements.txt
cc/: multi-sweep-starter.sh
cc/slurm/: cumulative_run_starter.py  run-starter.py  sr-run-starter.py
cc/sweeps/: 053st35q.txt  0c82kz7f.txt  0joy9r4l.txt  0l3xe3s2.txt  0l8wrjs9.txt  0o4624tg.txt  0p0tynl0.txt  0p3hrewr.txt  0twlxygu.txt  18qvow3b.txt  1h7ybiu5.txt  1ybc7qed.txt  1yc6wt84.txt  20938cut.txt  2mnclbz2.txt  2sh92ugc.txt  3aewd5rh.txt  3slde1jz.txt  3x0ub6w0.txt  3y5utotp.txt  416a0lcx.txt  5o6mioxd.txt  60e2jzi3.txt  63ilmdqf.txt  64fxsro8.txt  69jyjwzi.txt  6ehjyl11.txt  6m9zs6ys.txt  6wfbdo1p.txt  73hsc75b.txt  79v27u2v.txt  7d4ycdav.txt  7ir60x79.txt  7k6vz5q2.txt  7m77fhym.txt  7x14qbmr.txt  7yfojkmd.txt  83jpdehx.txt  86r591hw.txt  8gadaz21.txt  (+206 more)
docs/adr/: 0001-symbolic-regression-fit-metrics.md  0002-architecture-ladder-experiments.md  0002-symbolic-regression-slurm-job-chaining.md  0003-baseline-checkpointing.md  0004-self-describing-sweep-file-flags.md  0005-synthesis-identity-scratch-paths.md  0006-per-condition-template-symbolic-regression.md  0007-rdp-accounting-model.md  0007-surrogate-target-regimes-for-transfer.md  0008-riemannian-schedule-projection.md  0008-transfer-evaluation-architecture.md  0009-truncated-poisson-subsampling.md
dp_psac_ref/: README.md  accountant.py  calibrate.py  data.py  dp_psac.py  pyproject.toml  run.py  test_dp_psac.py
presentations/lab-methods-organizing-experiments/: build_presentation.py
presentations/nidhi-lab-18/: build_presentation.py
presentations/nihhi-lab-18/: build_presentation.py
refactors/: 001-scoped-run-context.md  002-privacy-budget-projection.md  003-schedule-update-step.md  004-run-lifecycle.md
results/interpretations/: dc-sweep-sgd.md
src/: analyze_logs.py  assign_groups.py  compile_results_fetch.py  compile_results_plot.py  create_experiments.py  main.py  predict_memory.py  pysr_test.py  pytest.ini  sr_category.py  sr_identity.py  sweep.py  symbolic_regression.py  symbolic_regression_eval.py  sympy_test.py  test_idea.py  transfer_curve.py  transfer_equation.py  transfer_plot.py  transfer_reference.py
src/.claude/: refactor.md
src/bugs/: report.txt
src/conf/: config.py  config_util.py  optimizer_config.py  optimizer_registry.py  scope.py  singleton_conf.py
src/environments/: action_envs.py  dp.py  dp_params.py  dp_state.py  losses.py  nes.py  obs_envs.py  outer_loop.py  step_envs.py
src/experiments/: architectures.py
src/networks/: CNN.py  MLP.py  _registry.py  net_factory.py  nets.py  util.py
src/networks/auto/: config.py
src/networks/cnn/: CNN.py  config.py
src/networks/mlp/: MLP.py  config.py
src/policy/: base_schedules.py  factory.py  riemannian.py  schedules.py  stateful_schedules.py
src/policy/base_schedules/: _registry.py  abstract.py  bspline.py  clipped.py  config.py  constant.py  exponential.py  factory.py
src/policy/schedules/: _registry.py  abstract.py  alternating.py  config.py  decoupled_sigma_and_clip.py  dynamic_dpsgd.py  factory.py  parallel_sigma_and_clip.py  policy_and_clip.py  schedules.py  sigma_and_clip.py  warmup_alternating.py  warmup_parallel_sigma_and_clip.py  warmup_sigma_and_clip.py
src/policy/stateful_schedules/: _registry.py  abstract.py  config.py  factory.py  median_gradient.py
src/policy/stateful_schedules/median_gradient/: config.py  median_gradient.py
src/privacy/: base_schedules.py  clip_schedules.py  derived_schedules.py  gdp_privacy.py  privacy.py  rdp_accountant.py  rdp_privacy.py  schedules.py
src/test/: _shared.py  test_bspline_jax.py  test_checkpointing.py  test_compile_results_fetch.py  test_config.py  test_dataloader.py  test_decoupled_schedule.py  test_dynamic_dpsgd.py  test_fista.py  test_grad_guard.py  test_linalg.py  test_nes.py  test_networks.py  test_predict_memory.py  test_privacy.py  test_property_base_schedules.py  test_property_based.py  test_property_gdp_privacy.py  test_property_mlp.py  test_property_schedules.py  test_rdp_accountant.py  test_rdp_privacy.py  test_riemannian.py  test_run_lifecycle.py  test_scope.py  test_sweep_file.py  test_sweep_pipeline.py  test_symbolic_regression.py  test_symbolic_regression_template.py  test_transfer.py  test_transfer_curve.py  test_transfer_equation.py  test_transfer_plot.py  test_transfer_reference.py  test_truncated_poisson.py
src/test/property-tests/: conftest.py  test_config.py  test_gdp_privacy.py
src/util/: aggregators.py  baselines.py  checkpointing.py  dataloaders.py  eval.py  grad_guard.py  job_chain.py  linalg.py  logger.py  run_lifecycle.py  sweep_file.py  transfer.py  util.py  wandb_init.py
thesis/notes/: privacy-accountant-and-projection.md  research-domains.md  riemannian-rdp-procedure.md  symbolic-regression-template-constants.md
