[project]
name = "differentiable-privacy-percentages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.3.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "chex==0.1.90",
    "choreographer==1.0.9",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "datasets==4.0.0",
    "dill==0.3.8",
    "docstring-parser==0.17.0",
    "equinox==0.13.0",
    "etils==1.13.0",
    "farama-notifications==0.0.4",
    "filelock==3.19.1",
    "flax==0.10.7",
    "fonttools==4.59.1",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "gymnasium==1.2.0",
    "gymnax==0.0.9",
    "hf-xet==1.1.8",
    "huggingface-hub==0.34.4",
    "humanize==4.12.3",
    "hypothesis>=6.151.9",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "jax==0.6.2",
    "jax-cuda12-pjrt==0.6.2",
    "jax-cuda12-plugin==0.6.2",
    "jaxlib==0.6.2",
    "jaxtyping==0.3.2",
    "joblib==1.5.1",
    "kaggle>=2.0.0",
    "kaleido==1.0.0",
    "kiwisolver==1.4.9",
    "logistro==1.1.0",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.5",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.3",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "narwhals==2.1.2",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.9.1.4",
    "nvidia-cuda-cupti-cu12==12.9.79",
    "nvidia-cuda-nvcc-cu12==12.9.86",
    "nvidia-cuda-nvrtc-cu12==12.9.86",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.12.0.46",
    "nvidia-cufft-cu12==11.4.1.4",
    "nvidia-cusolver-cu12==11.7.5.82",
    "nvidia-cusparse-cu12==12.5.10.65",
    "nvidia-nccl-cu12==2.27.7",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvshmem-cu12==3.3.20",
    "opt-einsum==3.4.0",
    "optax==0.2.5",
    "orbax-checkpoint==0.11.23",
    "orjson==3.11.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "plotly==6.3.0",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "pyarrow==21.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest>=9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "sentry-sdk==2.35.0",
    "shtab==1.7.2",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "tensorstore==0.1.76",
    "threadpoolctl==3.6.0",
    "toolz==1.0.0",
    "tqdm==4.67.1",
    "treescope==0.1.10",
    "typeguard==4.4.4",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tyro>=1.0.8",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wadler-lindig==0.1.7",
    "wandb==0.21.1",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# src/ is not a package root; treat it as the source tree
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import ordering)
    "UP",     # pyupgrade (modernise syntax)
    "B",      # flake8-bugbear (common footguns)
    "C4",     # flake8-comprehensions (unnecessary list/dict/set calls)
    "RUF",    # ruff-specific rules
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
]
ignore = [
    # ── Docstrings / annotations – too noisy for research code ──
    "D",       # all pydocstyle rules
    "ANN",     # all type-annotation rules

    # ── ML / JAX naming conventions ──
    "N802",    # function name should be lowercase (MLP, CNN, etc.)
    "N803",    # argument name should be lowercase (X, C, etc.)
    "N806",    # variable in function should be lowercase (X_train, etc.)
    "N801",    # class name should use CapWords (MLP.py class)
    "N811",    # constant imported as non-constant
    "N999",    # invalid module name (MLP.py, CNN.py)

    # ── Research-code pragmatics ──
    "S101",    # use of assert (heavy in JAX/equinox patterns)
    "T201",    # print statements (used for experiment logging)
    "ERA001",  # commented-out code (common during experimentation)
    "PLR2004", # magic value comparison (common in ML thresholds)
    "FBT001",  # boolean positional args
    "FBT002",  # boolean default values
    "FBT003",  # boolean positional value in call
    "EM101",   # raw string in exception
    "EM102",   # f-string in exception
    "TRY003",  # long exception messages

    # ── Intentional patterns in this codebase ──
    "PLC0415", # import-outside-top-level (used in registries to avoid circular imports)
    "BLE001",  # blind except (used in outer loop error handling)
    "RUF002",  # ambiguous unicode in docstring (math symbols: μ, σ, ε)
    "RUF003",  # ambiguous unicode in comment (math symbols)
    "B905",    # zip() without strict= (JAX arrays always have matching shapes)

    # ── Formatter handles these ──
    "E501",    # line too long (ruff format handles wrapping)
    "COM812",  # trailing comma (ruff format handles this; conflicts if both enabled)
]

[tool.ruff.lint.per-file-ignores]
"src/test/**" = [
    "PLR2004", # magic values fine in test assertions
    "ARG001",  # unused function args (pytest fixtures)
    "ARG002",
]
"cc/slurm/**" = [
    "PTH",     # os.path fine in SLURM scripts
]
# tyro requires Union[Annotated[X, subcommand(...)], ...] syntax (not X | Y) for
# subcommand dispatch, and evaluates dataclass defaults at class-definition time
# (so field(default_factory=...) would break tyro introspection).
"src/conf/config.py" = ["UP007", "RUF009"]
"src/policy/base_schedules/config.py" = ["UP007"]
# NamedTemporaryFile is intentionally kept open across multiple method calls;
# a context manager would close it too early.
"src/util/logger.py" = ["SIM115"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
